--- a/src/styles/ExerciseList.css
+++ b/src/styles/ExerciseList.css
@@ -2,7 +2,7 @@
 
 .search-bar {
     max-width: 300px;
-    width: 90vw;
+    width: 90%;
     padding: 4px;
     align-self: center;
     justify-self: center;
@@ -26,7 +26,7 @@
 .add-exercise-modal {
     display: flex;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgba(60, 60, 60, 0.7);
     z-index: 100;
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: column;
     max-width: 400px;
-    width: 90vw;
+    width: 90%;
     z-index: 0;
     padding-top: 3.5em;
     justify-content: flex-start;
@@ -89,7 +89,7 @@
     display: flex;
     flex-direction: column;
     background-color: black;
-    width: 60vw;
+    width: 60%;
     height: fit-content;
     border-radius: 10px;
     padding: 10px;
