--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -43,7 +43,7 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 h1 {
